--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tailwindcss/vite": "^4.1.14",
     "aos": "^2.3.4",
     "firebase": "^12.4.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.9.4",
     "react-slick": "^0.31.0",
