--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.2.0",
+    "@stripe/stripe-js": "^8.1.0",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "aos": "^2.3.4",
     "axios": "^1.12.2",
+    "country-list": "^2.4.1",
     "firebase": "^12.4.0",
+    "iso-3166-1": "^2.1.1",
+    "iso-3166-1-alpha-2": "^1.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
@@ -28,6 +33,7 @@
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
+    "stripe": "^19.1.0",
     "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.14"
   },
