--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "axios": "^1.12.2",
     "country-list": "^2.4.1",
     "firebase": "^12.4.0",
+    "html2canvas": "^1.4.1",
     "iso-3166-1": "^2.1.1",
     "iso-3166-1-alpha-2": "^1.0.2",
+    "jspdf": "^3.0.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
@@ -31,6 +33,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.9.4",
     "react-slick": "^0.31.0",
+    "react-to-print": "^3.2.0",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "stripe": "^19.1.0",
