--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jspdf": "^3.0.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
@@ -35,6 +36,7 @@
     "react-slick": "^0.31.0",
     "react-to-print": "^3.2.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.3.0",
     "slick-carousel": "^1.8.1",
     "stripe": "^19.1.0",
     "sweetalert2": "^11.26.3",
