--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "aos": "^2.3.4",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "country-list": "^2.4.1",
     "firebase": "^12.4.0",
     "html2canvas": "^1.4.1",
@@ -27,6 +28,7 @@
     "lucide-react": "^0.546.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
